# EscalatorSimulator

./: README.md  pyproject.toml
src/escalator_simulator/: __init__.py
src/escalator_simulator/domain/models/: person.py
src/escalator_simulator/domain/services/: escalaor.py
src/escalator_simulator/domain/services/strategies/: strategy.py
