[project]
name = "escalator-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tadashi Ishida", email = "tadashi.ishida.722@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
